[gd_scene load_steps=3 format=3 uid="uid://dk8ynksi278rc"]

[ext_resource type="Script" path="res://Script/Intro.gd" id="1_flnqh"]
[ext_resource type="FontFile" uid="uid://dl3qv2kcedjtt" path="res://Asset/Font/QuinqueFive.ttf" id="2_vwkh8"]

[node name="Intro" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_flnqh")

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -180.0
offset_right = 180.0
offset_bottom = 180.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0.301961, 0.188235, 0.180392, 1)
theme_override_fonts/font = ExtResource("2_vwkh8")
theme_override_font_sizes/font_size = 50
text = "Carrot 

Saver"
horizontal_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_top = 400.0
offset_right = 188.0
offset_bottom = 522.0

[node name="Start_Game" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_fonts/font = ExtResource("2_vwkh8")
theme_override_font_sizes/font_size = 25
text = "Play"

[node name="Credit" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_fonts/font = ExtResource("2_vwkh8")
theme_override_font_sizes/font_size = 25
text = "Credit
"

[node name="Quit" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_fonts/font = ExtResource("2_vwkh8")
theme_override_font_sizes/font_size = 25
text = "Quit
"

[connection signal="pressed" from="VBoxContainer/Start_Game" to="." method="_on_start_game_pressed"]
[connection signal="pressed" from="VBoxContainer/Credit" to="." method="_on_credit_pressed"]
[connection signal="pressed" from="VBoxContainer/Quit" to="." method="_on_quit_pressed"]
